score shows num correct

--- a/score.html
+++ b/score.html
@@ -24,7 +24,7 @@
       localStorage.clear();
       location.reload();
     });
-    // local stroage 
+    // local stroage high scores
     var allScores = localStorage.getItem("allScores");
     allScores = JSON.parse(allScores);
 
@@ -40,7 +40,7 @@
     }
   </script>
  <!-- <script src="assets/js/score.js"></script> -->
- <script src="assets/js/script2.js"></script>
+ <script src="assets/js/script.js"></script>
 
 
 
