correct links update readme

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
 
-    <a href="score.html">View Highscores</a>
+    <a href="score.html">View High Scores</a>
 
     <section id="container"> 
 
