--- a/score.html
+++ b/score.html
@@ -12,7 +12,7 @@
   <h1>Highscores</h1>
   <ul id="highScore"></ul>
   <a href="index.html"><button class="go-back">Go Back</button></a>
-  <button id="clear" value="reset">Clear Highscore</button>
+  <button id="clear" value="reset">Clear High Score</button>
 
   <script>
     var highScore = document.querySelector("#highScore");
